--- a/catalogo.css
+++ b/catalogo.css
@@ -25,6 +25,7 @@ body {
   gap: 20px;
   flex-wrap: wrap;
   justify-content: center;
+  border-radius: 2%;
 }
 
 .navbar .menu a {
@@ -250,6 +251,36 @@ body {
 .ordenar:hover .ordenar-content {
   display: block;
 }
+/* Código existente */
+.ordenar, .cantidad-productos {
+  margin: 0 10px;
+  cursor: pointer;
+}
+.ordenar h2, .cantidad-productos h2 {
+  margin: 0;
+  font-size: 1rem;
+}
+.ordenar-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+  text-align: left;
+}
+.ordenar-content p {
+  padding: 12px 16px;
+  margin: 0;
+  font-size: 1rem;
+  color: #333;
+}
+.ordenar-content p:hover {
+  background-color: #f1f1f1;
+}
+.ordenar:hover .ordenar-content {
+  display: block;
+}
 #catalogo {
   display: flex;
   flex-wrap: wrap;
@@ -258,7 +289,6 @@ body {
   overflow-y: auto;
   max-height: 80vh;
 }
-
 .producto {
   flex: 1 1 22%;
   margin: 10px;
@@ -270,18 +300,15 @@ body {
   max-width: 23%;
   position: relative;
 }
-
 .producto img {
   max-width: 100%;
   height: auto;
 }
-
 .producto h2, .producto p {
   font-size: 1rem;
   color: #0E1B4D;
   margin: 10px 0;
 }
-
 .producto button {
   width: 100%;
   max-width: 200px;
@@ -294,7 +321,6 @@ body {
   color: #0E1B4D;
   margin-top: 20px;
 }
-
 .modal {
   display: none;
   position: fixed;
@@ -304,12 +330,11 @@ body {
   width: 25%;
   height: 100%;
   background-color: white;
-  box-shadow: -5px 0 15px rgba(0, 0, 0, .5);
+  box-shadow: -5px 0 15px rgba(0,0,0,.5);
   padding: 20px;
   border-radius: 10px 0 0 10px;
   overflow-y: auto;
 }
-
 .modal-header {
   display: flex;
   justify-content: space-between;
@@ -317,58 +342,48 @@ body {
   border-bottom: 1px solid #ddd;
   padding-bottom: 10px;
 }
-
 .modal-close {
   cursor: pointer;
   font-size: 2rem;
   color: #0E1B4D;
 }
-
 .modal-body {
   padding: 20px;
   text-align: center;
 }
-
 .carrito-vacio {
   font-size: 1rem;
   color: #0E1B4D;
 }
-
 .producto-nombre {
   font-size: 1.5rem;
   color: #0E1B4D;
 }
-
 .producto-precio {
   font-size: 1.375rem;
   color: #FF5733;
 }
-
 .total-pagar {
   font-size: 1.625rem;
   font-weight: bold;
   margin-top: 20px;
   color: #0E1B4D;
 }
-
 .modal-producto {
   display: flex;
   align-items: center;
   justify-content: center;
   margin-bottom: 20px;
 }
-
 .modal-producto img {
   width: 100px;
   height: 100px;
   margin-right: 20px;
 }
-
 .carrito-titulo {
   color: #0E1B4D;
   font-size: 1.25rem;
 }
-
 .pagar-todo {
   width: 100%;
   max-width: 100px;
@@ -381,14 +396,12 @@ body {
   color: #0E1B4D;
   margin: 40px auto;
 }
-
 .eliminar-producto {
   cursor: pointer;
   font-size: 1.25rem;
   color: #FF0000;
   margin-left: 10px;
 }
-
 .subtotal-container {
   display: flex;
   justify-content: space-between;
@@ -396,12 +409,10 @@ body {
   width: calc(100% - 40px);
   padding: 0 20px;
 }
-
 .subtotal-title, .subtotal-amount {
   font-size: 1rem;
   color: #0E1B4D;
 }
-
 .hero {
   position: relative;
   text-align: center;
@@ -410,13 +421,11 @@ body {
   height: 60vh; /* Ajuste para hacer la imagen más corta */
   overflow: hidden;
 }
-
 .hero img {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
-
 .hero-text {
   position: absolute;
   top: 50%;
@@ -424,16 +433,13 @@ body {
   transform: translate(-50%, -50%);
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
-
 .hero-text h1 {
   font-size: 50px;
   margin: 0;
 }
-
 .hero-text p {
   font-size: 20px;
 }
-
 .hero-text button {
   padding: 10px 20px;
   background-color: #0A1E47;
@@ -445,44 +451,65 @@ body {
 
 /* Media Queries para hacer responsive */
 @media (max-width: 480px) {
-  .producto {
-    flex: 1 1 100%;
-    max-width: 100%;
-    padding: 15px;
-    margin: 10px 5;
-  }
+.producto {
+  flex: 1 1 48%; /* Aumenta el ancho de los productos al 48% */
+  max-width: 48%; /* Aumenta el ancho máximo de los productos al 48% */
+  padding: 15px;
+  margin: 10px;
+}
 
-  .producto h2, .producto p {
-    font-size: 1rem;
-  }
+.producto h2, .producto p {
+  font-size: 1rem;
+}
 
-  .producto button {
-    font-size: 1rem;
-    padding: 10px 0;
-  }
+.producto button {
+  font-size: .7rem;
+  padding: 10px 0;
+}
 
-  .modal {
-    width: 100%;
-  }
+.modal {
+  width: 100%;
+}
+
+.hero-text {
+  position: static; /* Ajusta la posición del texto hero */
+  transform: none;
+  text-align: left;
+  padding: 20px;
+}
+
+.hero-text h1 {
+  font-size: 30px; /* Ajusta el tamaño del texto hero */
+}
+
+.hero-text p {
+  font-size: 16px; /* Ajusta el tamaño del texto hero */
+}
+
+.hero-text button {
+  font-size: 14px; /* Ajusta el tamaño del botón hero */
+  padding: 8px 16px;
+}
 }
 
 @media (max-width: 768px) {
-  .producto {
-    flex: 1 1 30%;
-    max-width: 30%;
-  }
+.producto {
+  flex: 1 1 30%;
+  max-width: 30%;
+}
 
-  .modal {
-    width: 75%;
-  }
+.modal {
+  width: 75%;
+}
 }
 
 @media (min-width: 769px) {
-  .producto {
-    flex: 1 1 22%;
-    max-width: 23%;
-  }
+.producto {
+  flex: 1 1 22%;
+  max-width: 23%;
 }
+}
+
 
 
 
