--- a/whalas.css
+++ b/whalas.css
@@ -68,7 +68,7 @@ body {
 }
 
 .product-price {
-    font-size: 1.6em;
+    font-size: 1.5em;
     color: #333;
     margin-top: 60px; /* Añadir margen superior para más espacio */
 }
@@ -166,7 +166,6 @@ body {
 }
 
 .accordion {
-    margin: 30px 0; /* Espacio considerable entre los acordeones */
     width: 100%;
     max-width: 600px;
     margin-left: auto; /* Centrar el acordeón horizontalmente */
@@ -243,7 +242,34 @@ body {
 
 .video-container img {
     width: 100%;
-    border-radius: 10px;
+    border-radius: 25px;
+}
+.new-section2 {
+    margin-top: 20px;
+    text-align: center;
+}
+
+
+.new-section2 h2 {
+    font-size: 2em;
+    margin-bottom: 10px;
+}
+
+
+.new-section2 p {
+    font-size: 1em;
+    margin-bottom: 20px;
+    line-height: 1.5;
+}
+
+.video-container2 {
+    max-width: 300px;
+    margin: 0 auto;
+}
+
+.video-container2 img {
+    width: 100%;
+    border-radius: 25px;
 }
 
 /* Estilos para la vista ampliada */
@@ -337,3 +363,405 @@ body {
         font-size: 1.2em; /* Reducir tamaño de fuente en pantallas móviles */
     }
 }
+/* Sección del slider */
+.slider, .slider2, .slider3 {
+    width: 100vw; /* Ajusta el ancho al 100% de la vista */
+    height: auto;
+    overflow: hidden;
+    background-color: #EFF0F5;
+  }
+  
+  .slide-track, .slide-track2, .slide-track3 {
+    display: flex;
+    animation: scroll 40s linear infinite;
+    width: calc(200px * 14);
+  }
+  
+  .slide, .slide2, .slide3 {
+    width: 200px;
+    flex-shrink: 0;
+  }
+  slide-text3, slide-text2, slide-text {
+    width: 100%;
+    color: #0E1B4D;
+    text-align: center; /* Añadido para centrar el texto */
+  }
+  @keyframes scroll {
+    0% {
+        transform: translateX(0);
+    }
+    100% {
+        transform: translateX(calc(-200px * 7));
+    }
+  }
+  
+  @media screen and (max-width: 768px) {
+    .slide, .slide2, .slide3 {
+        font-size: 1rem;
+    }
+  }
+  /* Barra de navegación */
+.navbar {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px;
+    background-color: #0E1B4D;
+    color: #EFF0F5;
+  }
+  
+  .navbar .logo img {
+    height: 80px;
+  }
+  
+  .navbar .menu {
+    display: flex;
+    gap: 20px;
+    flex-wrap: wrap;
+    justify-content: center;
+    border-radius: 2%;
+  }
+  
+  .navbar .menu a {
+    color: #EFF0F5;
+    text-decoration: none;
+    font-size: 1rem;
+  }
+  
+  .navbar .menu a:hover {
+    text-decoration: underline;
+  }
+  
+  .search-cart-container {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+  }
+  
+  .navbar .search-container {
+    display: flex;
+    align-items: center;
+    position: relative;
+  }
+  
+  .navbar .search-container input[type="text"] {
+    padding: 5px;
+    border: none;
+    border-radius: 25px;
+    margin-right: 10px;
+    width: 0;
+    opacity: 0;
+    transition: width 0.3s ease, opacity 0.3s ease;
+    position: absolute;
+    right: 40px;
+  }
+  
+  .navbar .search-container input[type="text"].active {
+    width: 200px;
+    opacity: 1;
+  }
+  
+  .navbar .search-container img {
+    width: 25px;
+    height: 25px;
+    cursor: pointer;
+  }
+  
+  .carrito {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+  }
+  
+  .carrito img {
+    width: 25px;
+    height: 25px;
+    color: #EFF0F5;
+  }
+  
+  .carrito h2 {
+    margin-left: 10px;
+    font-size: 20px;
+    color: #EFF0F5;
+  }
+  
+  /* Iconos del menú y cerrar menú */
+  .menu-icon, .close-icon {
+    display: none;
+  }
+  
+  /* Estilos del submenú */
+  .submenu {
+    position: relative;
+  }
+  
+  .submenu-content {
+    display: none;
+    position: absolute;
+    background-color: #0E1B4D;
+    min-width: 160px;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+  }
+  
+  .submenu-content a {
+    color: #EFF0F5;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  .submenu-content a:hover {
+    background-color: #1A237E;
+  }
+  
+  .submenu:hover .submenu-content {
+    display: block;
+  }
+  
+  /* Ajustes para la versión móvil */
+  @media screen and (max-width: 768px) {
+    .navbar {
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+    }
+  
+    .menu-icon {
+      display: block;
+      cursor: pointer;
+    }
+  
+    .menu-icon img {
+      width: 30px;
+      height: 30px;
+    }
+  
+    .logo {
+      display: flex;
+      justify-content: center;
+      flex: 1;
+      text-align: center;
+    }
+  
+    .logo img {
+      margin: 0 auto;
+    }
+  
+    .menu {
+      flex-direction: column;
+      position: absolute;
+      top: 0;
+      left: -250px;
+      background-color: #0E1B4D;
+      width: 250px;
+      height: 100%;
+      transition: left 0.3s ease;
+      z-index: 10;
+      padding-top: 20px;
+    }
+  
+    .menu.active {
+      left: 0;
+    }
+  
+    .close-icon {
+      display: flex;
+      justify-content: flex-end;
+      padding-right: 20px;
+      cursor: pointer;
+    }
+  
+    .close-icon img {
+      width: 25px;
+      height: 25px;
+    }
+  
+    .search-container {
+      display: flex;
+      justify-content: flex-end;
+    }
+  
+    .carrito {
+      display: flex;
+      justify-content: flex-end;
+      margin-left: 10px;
+    }
+  
+    .search-container input[type="text"] {
+      width: 150px;
+      opacity: 1;
+    }
+  
+    /* Estilos para el submenú en versión móvil */
+    .submenu-content {
+      position: relative;
+      background-color: #0E1B4D;
+      width: 100%;
+    }
+  
+    .submenu-content a {
+      padding: 12px;
+    }
+  
+    .menu.active .submenu-content {
+      display: block;
+    }
+  }
+  /**************
+   FOOTER
+**************/
+.footer {
+    background-color: #0E1B4D;
+    padding: 20px;
+    text-align: center;
+  }
+  
+  .footer-menu {
+    list-style-type: none;
+    padding: 0;
+  }
+  
+  .footer-menu li {
+    display: inline;
+    margin: 0 15px;
+  }
+  
+  .footer-menu a {
+    text-decoration: none;
+    color: #EFF0F5;
+  }
+  
+  .payment-methods {
+    margin-top: 20px;
+  }
+  
+  .footer-text {
+    margin-top: 20px;
+    font-size: 14px;
+    color: #EFF0F5;
+  }
+  
+  /* Estilos responsive */
+  @media screen and (max-width: 768px) {
+    .product-container {
+      flex-direction: column;
+      align-items: center;
+      gap: 20px;
+    }
+  
+    .product-slider {
+      width: 100%;
+      height: auto;
+    }
+  
+    .product-image,
+    .product-image img {
+      height: auto;
+    }
+  
+    .product-images {
+      position: static;
+      margin-top: 10px;
+    }
+  
+    .product-thumb {
+      width: 60px;
+      height: 60px;
+    }
+  
+    .product-info {
+      align-items: center;
+      text-align: center;
+    }
+  
+    .product-info h2 {
+      font-size: 20px;
+    }
+  
+    .price-container {
+      gap: 5px;
+    }
+  
+    .product-info .old-price,
+    .product-info .price {
+      font-size: 18px;
+    }
+  
+    .product-info p {
+      text-align: center;
+    }
+  
+    .add-to-cart {
+      padding: 10px 20px;
+    }
+  
+    /* Estilos específicos para el footer en dispositivos móviles */
+    .footer-menu {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+    }
+  
+    .footer-menu li {
+      display: block;
+      margin: 10px 0;
+    }
+  
+    .footer-menu a {
+      text-align: left;
+    }
+  }
+  
+
+.icon-bar {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 20px;
+    background-color: #EFF0F5;
+    color: #0E1B4D;
+}
+
+.icon-container {
+    text-align: center;
+}
+
+.icon-container img {
+    width: 50px;
+    height: 50px;
+    margin-bottom: 10px;
+}
+
+.icon-container p {
+    font-size: 1rem;
+    margin: 0;
+    font-weight: bold;
+}
+@media (max-width: 768px) {
+    .icon-bar {
+        flex-direction: column;
+    }
+
+    .icon-container img {
+        width: 60px;
+        height: 60px;
+    }
+
+    .icon-container p {
+        font-size: 1.2rem;
+    }
+}
+
+@media (max-width: 480px) {
+    .icon-container img {
+        width: 40px;
+        height: 40px;
+    }
+
+    .icon-container p {
+        font-size: 1rem;
+    }
+}
+
