--- a/whalas.css
+++ b/whalas.css
@@ -12,6 +12,7 @@ body {
   height: auto;
   overflow: hidden;
   background-color: #EFF0F5;
+  font-weight: bold;
 }
 
 .slide-track, .slide-track2, .slide-track3 {
@@ -612,6 +613,7 @@ new section
   .product-quantity input {
     width: 30px;
   }
+/******** SHARE BOTON******/
 }
 .share-button-wrapper {
   text-align: right;
@@ -634,5 +636,111 @@ new section
   margin-right: 5px;
   height: 20px;
 }
+/*******ICON BAR*******/
+.icon-bar {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 20px;
+    background-color: #EFF0F5;
+    color: #0E1B4D;
+    flex-wrap: wrap;
+}
 
+.icon-container {
+    text-align: center;
+    margin: 40px;
+}
+
+.icon-container img {
+    width: 50px;
+    height: 50px;
+    margin-bottom: 10px;
+}
+
+.icon-container p {
+    font-size: 1.5rem;
+    margin: 0;
+    font-weight: bold;
+}
+
+@media (max-width: 768px) {
+    .icon-bar {
+        flex-direction: column;
+    }
+
+    .icon-container img {
+        width: 60px;
+        height: 60px;
+    }
+
+    .icon-container p {
+        font-size: 1.2rem;
+    }
+}
+
+@media (max-width: 480px) {
+    .icon-container img {
+        width: 40px;
+        height: 40px;
+    }
+
+    .icon-container p {
+        font-size: 1.5rem;
+    }
+}
+/**************
+   FOOTER
+**************/
+.footer {
+  background-color: #0E1B4D;
+  padding: 20px;
+  text-align: center;
+  width: 100%;  /* Asegura que el footer ocupe todo el ancho */
+  box-sizing: border-box;  /* Incluye el padding en el tamaño total del footer */
+}
+
+.footer-menu {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;  /* Asegúrate de que no haya margen adicional */
+}
+
+.footer-menu li {
+  display: inline;
+  margin: 0 15px;
+}
+
+.footer-menu a {
+  text-decoration: none;
+  color: #EFF0F5;
+}
+
+.payment-methods {
+  margin-top: 20px;
+}
+
+.footer-text {
+  margin-top: 20px;
+  font-size: 14px;
+  color: #EFF0F5;
+}
+
+/* Estilos responsive */
+@media screen and (max-width: 768px) {
+  .footer-menu {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .footer-menu li {
+    display: block;
+    margin: 10px 0;
+  }
+
+  .footer-menu a {
+    text-align: left;
+  }
+}
 
