--- a/whalas.css
+++ b/whalas.css
@@ -659,7 +659,7 @@ new section
 }
 
 .icon-container p {
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     margin: 0;
     font-weight: bold;
 }
@@ -686,7 +686,7 @@ new section
     }
 
     .icon-container p {
-        font-size: 1.5rem;
+        font-size: 1.2rem;
     }
 }
 /**************
@@ -704,12 +704,10 @@ new section
   list-style-type: none;
   padding: 0;
   margin: 0;  /* Asegúrate de que no haya margen adicional */
-  display: flex;
-  justify-content: center;  /* Centra los elementos horizontalmente */
-  flex-wrap: wrap;  /* Permite que los elementos se ajusten a la línea siguiente si es necesario */
 }
 
 .footer-menu li {
+  display: inline;
   margin: 0 15px;
 }
 
@@ -731,22 +729,21 @@ new section
 /* Estilos responsive */
 @media screen and (max-width: 768px) {
   .footer-menu {
-    flex-direction: column;  /* Cambia a disposición vertical en pantallas pequeñas */
-    align-items: center;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
   }
 
   .footer-menu li {
+    display: block;
     margin: 10px 0;
   }
 
   .footer-menu a {
-    text-align: center;  /* Centra el texto de los enlaces */
+    text-align: left;
   }
-
-  .payment-methods img {
-    max-width: 100%;  /* Asegura que la imagen de métodos de pago se ajuste al ancho del contenedor */
-    height: auto;  /* Mantiene la proporción de la imagen */
-  }
+    
 }
+
 
 
