--- a/whalas.css
+++ b/whalas.css
@@ -4,7 +4,11 @@ body {
   padding: 0;
   background-color: #EFF0F5;
   color: #0E1B4D;
+  min-height: 100vh; /* Añadir esta línea */
+  display: flex;
+  flex-direction: column;
 }
+
 
 /* Sección del slider */
 .slider, .slider2, .slider3 {
@@ -25,11 +29,13 @@ body {
   width: 200px;
   flex-shrink: 0;
 }
-slide-text3, slide-text2, slide-text {
+
+.slide-text3, .slide-text2, .slide-text {
   width: 100%;
   color: #0E1B4D;
   text-align: center; /* Añadido para centrar el texto */
 }
+
 @keyframes scroll {
   0% {
       transform: translateX(0);
@@ -521,8 +527,6 @@ new section
   line-height: 1.5;
 }
 
-
-
 .modal {
   display: none; 
   position: fixed; 
@@ -638,56 +642,56 @@ new section
 }
 /*******ICON BAR*******/
 .icon-bar {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    padding: 20px;
-    background-color: #EFF0F5;
-    color: #0E1B4D;
-    flex-wrap: wrap;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 20px;
+  background-color: #EFF0F5;
+  color: #0E1B4D;
+  flex-wrap: wrap;
 }
 
 .icon-container {
-    text-align: center;
-    margin: 40px;
+  text-align: center;
+  margin: 40px;
 }
 
 .icon-container img {
-    width: 50px;
-    height: 50px;
-    margin-bottom: 10px;
+  width: 50px;
+  height: 50px;
+  margin-bottom: 10px;
 }
 
 .icon-container p {
-    font-size: 1.2rem;
-    margin: 0;
-    font-weight: bold;
+  font-size: 1.2rem;
+  margin: 0;
+  font-weight: bold;
 }
 
 @media (max-width: 768px) {
-    .icon-bar {
-        flex-direction: column;
-    }
+  .icon-bar {
+    flex-direction: column;
+  }
 
-    .icon-container img {
-        width: 60px;
-        height: 60px;
-    }
+  .icon-container img {
+    width: 60px;
+    height: 60px;
+  }
 
-    .icon-container p {
-        font-size: 1.2rem;
-    }
+  .icon-container p {
+    font-size: 1.2rem;
+  }
 }
 
 @media (max-width: 480px) {
-    .icon-container img {
-        width: 40px;
-        height: 40px;
-    }
+  .icon-container img {
+    width: 40px;
+    height: 40px;
+  }
 
-    .icon-container p {
-        font-size: 1.2rem;
-    }
+  .icon-container p {
+    font-size: 1.2rem;
+  }
 }
 /**************
    FOOTER
@@ -696,14 +700,15 @@ new section
   background-color: #0E1B4D;
   padding: 20px;
   text-align: center;
-  width: 100%;  /* Asegura que el footer ocupe todo el ancho */
-  box-sizing: border-box;  /* Incluye el padding en el tamaño total del footer */
+  color: #EFF0F5;
+  flex-shrink: 0; /* Añadir esta línea */
+  width: 100%; /* Asegura que el footer ocupa todo el ancho */
 }
 
 .footer-menu {
   list-style-type: none;
   padding: 0;
-  margin: 0;  /* Asegúrate de que no haya margen adicional */
+  margin: 0; /* Añadir esta línea para evitar márgenes no deseados */
 }
 
 .footer-menu li {
@@ -726,8 +731,10 @@ new section
   color: #EFF0F5;
 }
 
+
 /* Estilos responsive */
 @media screen and (max-width: 768px) {
+  /* Estilos específicos para el footer en dispositivos móviles */
   .footer-menu {
     display: flex;
     flex-direction: column;
@@ -742,8 +749,4 @@ new section
   .footer-menu a {
     text-align: left;
   }
-    
 }
-
-
-
